# credmesh-solana

./: .gitignore  AUDIT.md  Anchor.toml  BANKRUN_SETUP_NOTES.md  BRAND_BRIEF.md  BRUTAL-TRUTH-EVM-PARITY-DRIFT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  DESIGN.md  HANDOFF_REVIEW.md  ORCHESTRATOR.md  PROGRESS.md  README.md  TESTING_PLAN.md  UX_SPEC.md  V1_ACCEPTANCE.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
concepts/01-monastic-ledger/: README.md  dashboard-frame.html  inspiration.md
concepts/02-industrial-throughput/: README.md  dashboard-frame.html  inspiration.md
concepts/03-mycelium-organism/: README.md  dashboard-frame.html  inspiration.md
concepts/04-typography-cinematic/: README.md  dashboard-frame.html  inspiration.md
concepts/04-typography-cinematic/v2/: agent-observatory.html  dashboard-frame.html  elements.html  governance.html  tokens.css
concepts/05-lab-instrument/: README.md  dashboard-frame.html  inspiration.md
concepts/06-terminal-cyberdeck/: README.md  dashboard-frame.html  inspiration.md
concepts/07-cartographic-topology/: README.md  dashboard-frame.html  inspiration.md
concepts/08-anti-fintech-punk/: README.md  dashboard-frame.html  inspiration.md
concepts/09-architectural-blueprint/: README.md  dashboard-frame.html  inspiration.md
concepts/09-architectural-blueprint/v2/: README.md  agent-observatory.html  dashboard-frame.html  elements.html  governance.html  tokens.css
concepts/10-swiss-institutional/: README.md  dashboard-frame.html  inspiration.md
concepts/10-swiss-institutional/v2/: README.md  agent-observatory.html  dashboard-frame.html  elements.html  governance.html  tokens.css
crates/credmesh-shared/: Cargo.toml
crates/credmesh-shared/src/: cross_program.rs  ix_introspection.rs  lib.rs  mpl_identity.rs
docs/: ARCHITECTURE.md  LOGIC_FLOW.md
docs/sessions/: 2026-04-29_epic9-orchestration.md
programs/credmesh-attestor-registry/: Cargo.toml
programs/credmesh-attestor-registry/src/: errors.rs  events.rs  lib.rs  state.rs
programs/credmesh-escrow/: Cargo.toml
programs/credmesh-escrow/src/: errors.rs  events.rs  lib.rs  pricing.rs  state.rs  token_2022_spike.rs
programs/credmesh-escrow/src/instructions/: claim_and_settle.rs  deposit.rs  execute_params.rs  init_pool.rs  liquidate.rs  mod.rs  propose_params.rs  request_advance.rs  skim_protocol_fees.rs  withdraw.rs
programs/credmesh-escrow/tests/: request_advance.test.ts
programs/credmesh-escrow/tests/helpers/: ed25519.ts  memo.ts  setup.ts
programs/credmesh-receivable-oracle/: Cargo.toml
programs/credmesh-receivable-oracle/src/: errors.rs  events.rs  lib.rs  state.rs
programs/credmesh-reputation/: Cargo.toml
programs/credmesh-reputation/src/: errors.rs  events.rs  lib.rs  scoring.rs  state.rs
programs/credmesh-shared/: Cargo.toml
programs/credmesh-shared/src/: cross_program.rs  ix_introspection.rs  lib.rs  mpl_identity.rs
research/: 01-vault-escrow.md  02-identity-reputation.md  03-offchain-infra.md  04-payments-oracles.md  CONTRARIAN-permissionless-settle.md  CONTRARIAN.md  HANDLER_PATTERNS.md  REVIEW.md  SYNTHESIS.md
scripts/: add_allowed_signer.ts  deploy.ts  init_oracle.ts  init_pool.ts  init_registry.ts
scripts/lib/: cluster.ts  program-ids.ts
scripts/orchestrate/: bootstrap.sh  track-a-prompt.md  track-b-prompt.md  track-c-prompt.md  track-d-prompt.md
seeds/: 01-monastic-ledger.md  02-industrial-throughput.md  03-mycelium-organism.md  04-typography-cinematic.md  05-lab-instrument.md  06-terminal-cyberdeck.md  07-cartographic-topology.md  08-anti-fintech-punk.md  09-architectural-blueprint.md  10-swiss-institutional.md
tests/: README.md
tests/bankrun/: README.md  setup.ts
tests/bankrun/attacks/: ata_substitution.test.ts  consumed_close_reinit.test.ts  cross_agent_receivable_id_reuse.test.ts  cross_agent_replay.test.ts  sysvar_spoofing.test.ts
tests/bankrun/escrow/: claim_and_settle.test.ts  deposit_withdraw.test.ts  init_pool.test.ts  invariants.test.ts  liquidate.test.ts  request_advance_worker.test.ts
tests/bankrun/oracle/: register_job.test.ts
tests/bankrun/receivable_oracle/: ed25519_record.test.ts
tests/bankrun/reputation/: emit_cpi_noisy_log.test.ts  evm_parity.test.ts
ts/: README.md
ts/bridge/: README.md  package-lock.json  package.json
ts/bridge/src/: attestation.ts  event_tail.ts  evm.ts  index.ts
ts/dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ts/dashboard/src/: App.tsx  index.css  main.tsx
ts/dashboard/src/components/: Card.tsx  Layout.tsx  SharePriceChart.tsx  Stat.tsx
ts/dashboard/src/lib/: format.ts  mock-data.ts
ts/dashboard/src/providers/: SolanaProviders.tsx
ts/dashboard/src/views/: AgentView.tsx  GovernanceView.tsx  LpView.tsx
ts/keeper/: README.md  package-lock.json  package.json  tsconfig.json
ts/keeper/src/: index.ts
ts/server/: README.md  package-lock.json  package.json  tsconfig.json
ts/server/src/: auth.ts  pricing.ts  server.ts
ts/shared/: package-lock.json  package.json  tsconfig.json
ts/shared/src/: index.ts
