[workspace]
resolver = "2"
members = [
    "crates/credmesh-shared",
    "programs/credmesh-escrow",
    "programs/credmesh-attestor-registry",
]

# MSRV is set to match the rustc bundled with `solana 1.18.x` platform-tools.
# Combined with `[resolver] incompatible-rust-versions = "fallback"` in
# `.cargo/config.toml`, cargo will pick crate versions whose own
# `rust-version` is <= 1.75 instead of pulling in the latest published
# versions (which now require Rust 1.85+ for `edition2024`).
# Re-evaluate when bumping the Solana / platform-tools toolchain.
[workspace.package]
rust-version = "1.75"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = "0.30.1"
# `credmesh-shared` is a library crate, not a deployable Solana program, so it
# lives in `crates/` rather than `programs/`. Anchor only treats subdirs of
# `programs/` as IDL targets, and would error trying to extract one from a
# library that has no `#[program]` mod.
credmesh-shared = { path = "crates/credmesh-shared" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
