[package]
name = "credmesh-attestor-registry"
version = "0.1.0"
description = "Whitelist of bridge signers that produce ed25519 credit attestations relayed from EVM ReputationRegistry. Governance-managed via Squads CPI verification + timelock."
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "credmesh_attestor_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
credmesh-shared = { workspace = true }
