[package]
name = "credmesh-escrow"
version = "0.1.0"
description = "CredMesh escrow + LP vault + advance issuance + waterfall"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credmesh_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token"] }
credmesh-shared = { workspace = true }
