[package]
name = "credmesh-escrow"
version = "0.1.0"
description = "CredMesh escrow + LP vault + advance issuance + waterfall"
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "credmesh_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    # `anchor build` invokes `cargo test --features idl-build` to extract
    # the IDL. That can drop default features of `anchor-spl`, so explicitly
    # re-enable the SPL bindings the program references in its account
    # structs (`Token`, `AssociatedToken`).
    "anchor-spl/token",
    "anchor-spl/associated_token",
]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token", "associated_token"] }
credmesh-shared = { workspace = true }
credmesh-reputation = { path = "../credmesh-reputation", features = ["cpi"] }
credmesh-receivable-oracle = { path = "../credmesh-receivable-oracle", features = ["cpi"] }
