[package]
name = "credmesh-escrow"
version = "0.1.0"
description = "CredMesh escrow + LP vault + advance issuance + waterfall"
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "credmesh_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    # `anchor build` invokes `cargo test --features idl-build` to extract
    # the IDL. That can drop default features of `anchor-spl`, so explicitly
    # re-enable the SPL bindings the program references in its account
    # structs (`Token`, `AssociatedToken`).
    "anchor-spl/token",
    "anchor-spl/associated_token",
]
# Issue #5 spike: dormant Token-2022 forward-compat code path. NOT enabled
# in v1; the default build uses classic SPL Token via `anchor_spl::token`.
# When activated, pulls in the `token_interface` types so handlers can
# transact with classic SPL Token AND Token-2022 mints. See
# `programs/credmesh-escrow/src/token_2022_spike.rs`.
token-2022 = ["anchor-spl/token_2022", "anchor-spl/token_2022_extensions"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token", "associated_token"] }
credmesh-shared = { workspace = true }
credmesh-attestor-registry = { path = "../credmesh-attestor-registry", features = ["cpi"] }
