[package]
name = "credmesh-receivable-oracle"
version = "0.1.0"
description = "CredMesh receivable oracle — worker-attested + ed25519-verified payer-signed paths"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credmesh_receivable_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
credmesh-shared = { workspace = true }
