[package]
name = "credmesh-reputation"
version = "0.1.0"
description = "CredMesh reputation registry — 8004-shape, CredMesh-owned"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credmesh_reputation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
credmesh-shared = { workspace = true }
