[package]
name = "credmesh-shared"
version = "0.1.0"
description = "Shared seed constants and program IDs for the CredMesh Solana programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credmesh_shared"

[features]
default = []
no-entrypoint = []

[dependencies]
anchor-lang = { workspace = true }
